--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -112,22 +112,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Take a Photo" id="BY8-5G-u6c">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2jO-8J-JJz">
-                            <connections>
-                                <action selector="cancelTapped:" destination="au5-ON-E1O" id="aGD-VI-Eo8"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Next" id="JOx-9A-oxm">
-                            <connections>
-                                <action selector="nextTapped:" destination="au5-ON-E1O" id="2fc-ay-NLe"/>
-                                <segue destination="gwG-if-rh6" kind="push" id="hg4-21-E1L"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Take a Photo" id="BY8-5G-u6c"/>
                     <connections>
                         <outlet property="albumCollectionView" destination="Eks-qO-ql4" id="3V0-UD-YLh"/>
+                        <outlet property="cancelButton" destination="HR2-gq-ve7" id="FwK-cz-l0e"/>
                         <outlet property="mainScrollView" destination="Eip-uh-EK1" id="Ql5-LQ-jTd"/>
+                        <outlet property="nextButton" destination="JOx-9A-oxm" id="h2L-gE-vkC"/>
                         <outlet property="previewImageView" destination="zJ0-zx-SLS" id="kh8-1W-mVk"/>
                         <outlet property="previewView" destination="Pum-D8-HY2" id="dGS-JC-Fm1"/>
                         <outlet property="scrollHandle" destination="qOu-WT-l6B" id="g8m-lg-YCE"/>
@@ -139,6 +129,17 @@
                         <action selector="focusAndExposeTap:" destination="au5-ON-E1O" id="8hU-FM-J5j"/>
                     </connections>
                 </tapGestureRecognizer>
+                <barButtonItem systemItem="cancel" id="HR2-gq-ve7">
+                    <connections>
+                        <action selector="cancelTapped:" destination="au5-ON-E1O" id="yb1-Pf-8Ja"/>
+                    </connections>
+                </barButtonItem>
+                <barButtonItem title="Next" id="JOx-9A-oxm">
+                    <connections>
+                        <action selector="nextTapped:" destination="au5-ON-E1O" id="2fc-ay-NLe"/>
+                        <segue destination="gwG-if-rh6" kind="push" id="hg4-21-E1L"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="1705" y="1249"/>
         </scene>
@@ -249,7 +250,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Find or create a location" id="iWB-OH-Vpb">
-                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
@@ -258,7 +259,7 @@
                         </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" textLabel="P3r-23-afq" detailTextLabel="zi8-ed-PSC" style="IBUITableViewCellStyleSubtitle" id="MNg-Br-Yeq">
-                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MNg-Br-Yeq" id="LpV-NP-pjj">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
